Cleaned up API to match bld operations and options APIs